--- a/index.html
+++ b/index.html
@@ -1351,6 +1351,43 @@
             .skills-grid { grid-template-columns: 1fr 1fr; }
         }
         .project-links { display: none !important; }
+        /* Mobile Menu Styles */
+.nav-links.active {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: rgba(10, 10, 11, 0.98);
+    padding: 20px;
+    gap: 0;
+    border-bottom: 1px solid var(--border);
+}
+
+.nav-links.active a {
+    display: block !important;
+    padding: 15px 20px;
+    border-bottom: 1px solid var(--border);
+    text-align: center;
+}
+
+.nav-links.active a:last-child {
+    border-bottom: none;
+    margin-top: 10px;
+}
+
+.mobile-menu-btn.active span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+}
+
+.mobile-menu-btn.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.mobile-menu-btn.active span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+}
     </style>
 </head>
 <body>
@@ -2027,6 +2064,31 @@
 
         const statsSection = document.querySelector('.quick-stats');
         if (statsSection) statsObserver.observe(statsSection);
+
+        // Mobile Menu Toggle
+const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+const navLinks = document.querySelector('.nav-links');
+
+mobileMenuBtn.addEventListener('click', () => {
+    mobileMenuBtn.classList.toggle('active');
+    navLinks.classList.toggle('active');
+});
+
+// Close menu when clicking a link
+navLinks.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+        mobileMenuBtn.classList.remove('active');
+        navLinks.classList.remove('active');
+    });
+});
+
+// Close menu when clicking outside
+document.addEventListener('click', (e) => {
+    if (!navLinks.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
+        mobileMenuBtn.classList.remove('active');
+        navLinks.classList.remove('active');
+    }
+});
     </script>
 
 </body>
